--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
-[package]
-name = "rust-life"
-authors = ["Sergey Chernyshev"]
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-rand = "0.8.5"
+[workspace]
+resolver = "2"
+members = ["rusty-life-lib", "rusty-life"]
