--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["rusty-life-lib", "rusty-life"]
+members = ["rusty-life-lib", "rusty-life", "rusty-life-wasm"]
